--- a/Assignment1/q1.html
+++ b/Assignment1/q1.html
@@ -1,10 +1,9 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>
-            Web Prog. Assignments
-        </title>
-    </head>
-    <body>
-        
-    </body>
+  <head>
+    <title>Q1</title>
+  </head>
+  <body>
+    <h1 style="color: green">Aarav Tandon</h1>
+  </body>
 </html>
